# chem-eng-solver

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/_apidoc/: chem_eng_solver.rst
docs/source/: conf.py  index.rst
docs/source/_apidoc/: chem_eng_solver.rst  modules.rst
examples/: README.md  fluids.ipynb
src/chem_eng_solver/: __init__.py  base_solver.py  fluids.py  stoichiometry.py  units.py
tests/: test_base_solver.py  test_fluids.py  test_stoichiometry.py  test_units.py
