[tool.poetry]
name = "chem-eng-solver"
version = "0.0.1"
description = "Tools for solving common chemical engineering problems"
authors = ["Jon Wilkey <jon.wilkey@gmail.com>"]
license = "MIT License"
packages = [
    { include = "chem_eng_solver", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
scipy = "^1.7.1"
numpy = "^1.21.3"
unyt = "^2.8.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.910"
ipython = "^7.29.0"
flake8-docstrings = "^1.6.0"
isort = "^5.10.0"
Sphinx = "^4.2.0"
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=chem_eng_solver --cov-report term-missing"
testpaths = [
    "tests",
]
